src/test/deca/context/valid/thibault/optimisation/testOpt2.deca
{
	int a;
	float b;
	a=5+5+5;
	b=2+2;
}
