src/test/deca/context/invalid/pierre/modulo.deca
{
    float a = 0.4%1.2 ;
}